--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ publish = true
 rune = "0.14"
 thiserror = "2"
 pest = "2.8"
-pest_derive = "2.8"
+pest_derive = { version = "2.8", features = ["grammar-extras"] }
 glob = "0.3"
 tracing = "0.1"
 rand = "0.9"
