Luaテスト環境の整備と日本語対応の実装
- VSCode設定: Lua言語サーバーとデバッグ設定を追加
- テストライブラリ: lua_test のREADMEを日本語化し詳細な説明を追加
- 日本語サポート: hello.luaとテストファイルで日本語識別子を使用
- テストランナー: RustからLuaテストを実行するランナーを追加
- 統合テスト: 日本語識別子の動作検証テストを追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
   "Lua.diagnostics.disable": ["unicode-name"],
-  "Lua.runtime.unicodeName": true
+  "Lua.runtime.unicodeName": true,
+  "Lua.runtime.path": [
+    "${workspaceFolder}/crates/pasta_lua/scripts/?.lua",
+    "${workspaceFolder}/crates/pasta_lua/scripts/?/init.lua",
+    "${workspaceFolder}/crates/pasta_lua/scriptlibs/?.lua",
+    "${workspaceFolder}/crates/pasta_lua/scriptlibs/?/init.lua",
+    "?.lua",
+    "?/init.lua"
+  ],
+  "Lua.workspace.library": [
+    "${workspaceFolder}/crates/pasta_lua/scripts",
+    "${workspaceFolder}/crates/pasta_lua/scriptlibs",
+    "${workspaceFolder}/crates/pasta_lua/tests/lua_specs"
+  ],
+  "Lua.diagnostics.globals": ["describe", "test", "expect"]
 }
