改行コード制御機能とUCID日本語識別子サポートを追加
- LineEnding列挙型を追加（LF/CRLF切替可能）
- LuaCodeGeneratorに改行コード設定を統合
- クロスプラットフォーム比較用のnormalize_line_endings関数を追加
- lua-srcクレートをビルド依存関係に追加（UCIDサポート用）
- mlua依存を公式版（v0.11）に変更
- UCIDサポートの統合テストを追加

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ tracing = "0.1"
 tempfile = "3"
 
 # pasta_lua dependencies
-mlua = { git = "https://github.com/ekicyou/mlua.git", features = ["lua54", "vendored", "ucid"] }
+lua-src = { version = ">= 548.1.0, < 549.0.0", features = ["ucid"] }
+mlua = { version = "0.11", features = ["lua54", "vendored"] }
 
 # Internal dependencies
 pasta_core = { path = "crates/pasta_core" }
