feat(pasta_lua): 新しいアクションおよび環境オブジェクトの機能を追加し、テストフレームワークを更新

--- a/crates/pasta_lua/Cargo.toml
+++ b/crates/pasta_lua/Cargo.toml
@@ -8,10 +8,11 @@ publish = true
 description = "Pasta Lua - Lua integration for Pasta DSL"
 
 [dependencies]
+pasta_core.workspace = true
 tracing.workspace = true
 thiserror.workspace = true
 mlua.workspace = true
-pasta_core.workspace = true
+mlua-stdlib.workspace = true
 
 [build-dependencies]
 lua-src.workspace = true
