--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tempfile = "3"
 # pasta_lua dependencies
 lua-src = { version = ">= 548.1.0, < 549.0.0", features = ["ucid"] }
 mlua = { version = "0.11", features = ["lua54", "vendored"] }
+mlua-stdlib = { version = "0.1", features = ["lua54", "vendored", "json", "regex", "yaml"] }
 
 # Internal dependencies
 pasta_core = { path = "crates/pasta_core" }
