feat(spec): pasta-lua-startup-sequence要件定義完成とCargo.toml依存関係追加
- StartupError→LoaderError命名統一（Requirement 6）
- toml, serde, glob依存関係追加（ワークスペース・pasta_lua両方）
- mlua serialize フィーチャー有効化
- @pasta_config モジュール要件追加（Requirement 7）
- gap-analysis.md更新（依存関係解決済みマーク）

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,11 @@ tempfile = "3"
 
 # pasta_lua dependencies
 lua-src = { version = ">= 548.1.0, < 549.0.0", features = ["ucid"] }
-mlua = { version = "0.11", features = ["lua54", "vendored"] }
+mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
 mlua-stdlib = { version = "0.1", features = ["lua54", "vendored", "json", "regex", "yaml"] }
+toml = "0.9.8"
+serde = { version = "1", features = ["derive"] }
+glob = "0.3"
 
 # Internal dependencies
 pasta_core = { path = "crates/pasta_core" }
