--- a/crates/pasta_lua/Cargo.toml
+++ b/crates/pasta_lua/Cargo.toml
@@ -13,6 +13,9 @@ tracing.workspace = true
 thiserror.workspace = true
 mlua.workspace = true
 mlua-stdlib.workspace = true
+toml.workspace = true
+serde.workspace = true
+glob.workspace = true
 
 [build-dependencies]
 lua-src.workspace = true
