--- a/crates/pasta_shiori/Cargo.toml
+++ b/crates/pasta_shiori/Cargo.toml
@@ -14,6 +14,8 @@ crate-type = ["cdylib"]
 pasta_core.workspace = true
 pasta_lua.workspace = true
 thiserror.workspace = true
+pest.workspace = true
+pest_derive.workspace = true
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_Globalization"] }
