feat(pasta_shiori): SHIORIプロトコルの実装とエラーハンドリングの追加

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ glob = "0.3"
 # Internal dependencies
 pasta_core = { path = "crates/pasta_core" }
 pasta_lua = { path = "crates/pasta_lua" }
+pasta_shiori = { path = "crates/pasta_shiori" }
