--- a/crates/pasta_shiori/Cargo.toml
+++ b/crates/pasta_shiori/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 [dependencies]
 pasta_core.workspace = true
 pasta_lua.workspace = true
+tracing.workspace = true
 thiserror.workspace = true
 pest.workspace = true
 pest_derive.workspace = true
