feat(pasta-shiori): implement PastaShiori::load() with logging infrastructure
Implements pasta-shiori-load-implementation specification:
- PastaShiori::load() integrates PastaLoader for runtime initialization
- Instance-specific logging with GlobalLoggerRegistry for multi-instance routing
- PastaLogger with daily rotation and configurable retention
- All logging components in pasta_lua for reusability (pasta_areka, etc.)
- Full lifecycle tests: load → request → unload
- Multi-instance independence tests

Implementation:
- pasta_lua/logging: PastaLogger, GlobalLoggerRegistry, LoadDirGuard
- pasta_lua/loader: LoggingConfig integration, logger creation
- pasta_lua/runtime: Arc<PastaLogger> field for logger sharing
- pasta_shiori: Re-exports from pasta_lua, SHIORI implementation
- 7 new integration tests for lifecycle and multi-instance scenarios

Test results: 366 tests passed (87 pasta_core + 122 pasta_lua + 45 pasta_shiori + 112 integration)

All DoD gates passed:
✅ Spec Gate: requirements/design/tasks approved
✅ Test Gate: cargo test --workspace success
✅ Doc Gate: specification alignment verified
✅ Steering Gate: pasta_lua reusability for future modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,10 @@ toml = "0.9.8"
 serde = { version = "1", features = ["derive"] }
 glob = "0.3"
 
+# Logging dependencies
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-appender = "0.2"
+
 # Internal dependencies
 pasta_core = { path = "crates/pasta_core" }
 pasta_lua = { path = "crates/pasta_lua" }
