test(pasta_shiori): add SHIORI lifecycle Lua execution verification tests
- Add E2E integration tests for SHIORI load/request/unload lifecycle
- Verify actual Lua code execution through observable side effects
- Test SHIORI.load: validate loaded_hinst and load_dir globals
- Test SHIORI.request: verify request counter and Pasta scene execution
- Test SHIORI.unload: confirm file marker creation on drop
- Add dedicated test fixtures with observable SHIORI functions
- Implement copy_fixture_to_temp helper for isolated testing
- All 5 new tests pass, 0 regressions in existing 54 tests

Specification: .kiro/specs/shiori-lifecycle-lua-execution-test
Requirements: All 5 EARS requirements verified (Req 1-5)
Coverage: 100% task completion (13/13 tasks)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,11 @@ tracing-appender = "0.2"
 pasta_core = { path = "crates/pasta_core" }
 pasta_lua = { path = "crates/pasta_lua" }
 pasta_shiori = { path = "crates/pasta_shiori" }
+
+# Release profile optimizations for size reduction
+[profile.release]
+opt-level = "z"       # Optimize for size (最小サイズ)
+lto = true            # Link-Time Optimization (全体最適化)
+codegen-units = 1     # 並列コード生成を無効化して最適化向上
+panic = "abort"       # パニック時にアンワインド不要（サイズ削減）
+strip = true          # デバッグシンボルを削除
