feat: Phase 0完了 - 残り3項目達成
1. Golden Test整備 (insta crate)
   - transpiler_snapshot_test.rs: 8スナップショット
   - minimal_scene, scene_with_word/call/attributes/variables
   - multiple_scenes, actor_word_definition, tail_call_optimization

2. 最適化レベル文書化
   - OPTIMIZATION.md: TCO、アクター最適化、文字列リテラル

3. シーンテーブル設計レビュー
   - SCENE_TABLE_REVIEW.md: 設計評価と承認

ドキュメント更新:
- SOUL.md: Phase 0完了ステータス
- TEST_COVERAGE.md: 全DoD項目達成を記録

total tests: 493 (all passing)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tracing = "0.1"
 
 # Development dependencies
 tempfile = "3"
+insta = { version = "1.42", features = ["glob"] }
 
 # pasta_lua dependencies
 lua-src = { version = ">= 548.1.0, < 549.0.0", features = ["ucid"] }
