feat(pasta_lua): pasta.save永続化モジュール実装
- Rust側@pasta_persistenceモジュール追加（runtime/persistence.rs）
- PersistenceConfig設定管理（loader/config.rs）
- Drop trait自動保存（runtime/mod.rs）
- pasta.saveモジュール作成（scripts/pasta/save.lua）
- ctx.save統合（遅延require対応）
- STORE.save廃止（破壊的変更）

Features:
- JSON/gzip形式自動判別
- アトミック書き込み（一時ファイル→リネーム）
- pasta.toml設定対応（obfuscate, file_path）

Tests:
- 単体テスト: 15テスト（persistence.rs）
- 統合テスト: 9テスト（persistence_integration_test.rs）
- Lua仕様テスト: 12テスト（persistence_spec.lua）
- 全228テスト合格、回帰0件

Breaking Changes:
- STORE.saveフィールド削除（ctx.saveを使用）

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,9 @@ mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
 mlua-stdlib = { version = "0.1", features = ["lua54", "vendored", "json", "regex", "yaml"] }
 toml = "0.9.8"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 glob = "0.3"
+flate2 = "1.1"
 
 # Logging dependencies
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
