fix(ci): GitHub Actions環境に日本語ロケール設定を追加
- Set-WinSystemLocale ja-JP でシステムロケールを日本語に設定
- Set-Culture ja-JP でカルチャー設定も日本語に変更
- Shift-JIS（CP932）エンコーディングテストが通るように修正

これにより以下のテストが成功するはず:
- encoding::tests::test_to_ansi_bytes_japanese
- encoding::tests::test_to_ansi_bytes_roundtrip
- loader::context::tests::test_generate_package_path_bytes_japanese
- runtime::enc::tests::test_roundtrip_japanese

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,12 @@ jobs:
         with:
           key: ${{ matrix.target }}
 
+      - name: Set Japanese locale for Shift-JIS support
+        run: |
+          Set-WinSystemLocale ja-JP
+          Set-Culture ja-JP
+        shell: powershell
+
       - name: Build pasta_shiori
         run: cargo build --release --target ${{ matrix.target }} -p pasta_shiori
 
