--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
         include:
           - target: i686-pc-windows-msvc
             arch: x86
+          - target: x86_64-pc-windows-msvc
+            arch: x64
 
     steps:
       - name: Checkout repository
