feat(alpha04): ghosts/hello-pasta/ 配布物をリポジトリに追加
- build.rs でビルド時に設定ファイル自動生成
- generate-surfaces バイナリで画像生成
- 18枚のサーフェスPNG（sakura 0-8, kero 10-18）
- ukadoc準拠設定ファイル群（install.txt, descript.txt）
- pasta.toml + pasta DSLスクリプト
- 要件1「配布物がクレート内に存在」を満たす

--- a/crates/pasta_sample_ghost/Cargo.toml
+++ b/crates/pasta_sample_ghost/Cargo.toml
@@ -6,6 +6,10 @@ edition.workspace = true
 authors.workspace = true
 license.workspace = true
 
+[[bin]]
+name = "generate-surfaces"
+path = "src/bin/generate_surfaces.rs"
+
 [dependencies]
 # 画像生成
 image = "0.25"
