fix(alpha04): 配布物を dist/ から ghosts/hello-pasta/ に修正、pasta.dll 自動更新対応
主な変更:
- 配布物の場所を元の設計に戻す (crates/pasta_sample_ghost/ghosts/hello-pasta/)
- pasta.dll と scripts/ を git 管理に追加
- build.rs で pasta_shiori の変更を検知し、pasta.dll を自動コピー
- setup.ps1 を crates/pasta_sample_ghost/ に配置（ダブルクリック実行可能）
- scripts/build-ghost.ps1 を scripts/setup-ghost.ps1 にリネーム
- .gitignore から dist/ 関連の除外を削除

影響:
- requirements.md, design.md, tasks.md, spec.json を修正
- README.md の使用方法を更新
- pasta_shiori を dev-dependencies に追加

--- a/crates/pasta_sample_ghost/Cargo.toml
+++ b/crates/pasta_sample_ghost/Cargo.toml
@@ -19,6 +19,9 @@ imageproc = "0.25"
 thiserror.workspace = true
 
 [dev-dependencies]
+# pasta_shiori（DLL ビルド時に自動的に pasta.dll がコピーされる）
+pasta_shiori = { path = "../pasta_shiori" }
+
 # pasta_lua ランタイム（テスト用）
 pasta_lua = { path = "../pasta_lua" }
 
