SSPネットワーク更新ファイル生成機能の実装
変更内容:
- update_files.rs: SSP仕様のupdates2.dau/updates.txt生成機能
- finalize モード: --finalizeオプションで更新ファイルのみ生成
- setup.bat: ビルド順序を最適化（pasta.dll → 生成 → finalize）
- Cargo.toml: md5, encoding_rs依存関係追加
- lib.rs: finalize_ghost() API公開

--- a/crates/pasta_sample_ghost/Cargo.toml
+++ b/crates/pasta_sample_ghost/Cargo.toml
@@ -16,6 +16,12 @@ path = "src/main.rs"
 image = "0.25"
 imageproc = "0.25"
 
+# MD5ハッシュ計算
+md5 = "0.7"
+
+# Shift_JISエンコーディング
+encoding_rs = "0.8"
+
 # エラー処理
 thiserror.workspace = true
 
