docs(sample-ghost): pasta.tomlにloggingセクションを追加
- デフォルト値を明示的に記載（file_path, rotation_days）
- file_pathはload_dirからの相対パスであることをコメントで明記
- 既存実装では既に相対パス対応済み（config.rs: 'relative to load_dir'）

--- a/crates/pasta_sample_ghost/ghosts/hello-pasta/ghost/master/pasta.toml
+++ b/crates/pasta_sample_ghost/ghosts/hello-pasta/ghost/master/pasta.toml
@@ -33,3 +33,9 @@ random_talk_interval = 180
 [persistence]
 # 永続化データディレクトリ
 data_dir = "profile/pasta/save"
+
+[logging]
+# ログファイルパス（load_dir からの相対パス）
+file_path = "profile/pasta/logs/pasta.log"
+# ログローテーション日数
+rotation_days = 7
