--- a/crates/pasta_sample_ghost/templates/pasta.toml.template
+++ b/crates/pasta_sample_ghost/templates/pasta.toml.template
@@ -9,8 +9,8 @@
 # 将来的な pasta_lua の汎用用途（ノベルゲーム、ツール等）では
 # このセクションが必須になる可能性があります。
 [package]
-name = "hello-pasta"
-version = "1.0.0"
+name = "{{name}}"
+version = "{{version}}"
 edition = "2024"
 
 [loader]
