feat(sakura-script-wait): さくらスクリプトウェイト自動挿入機能実装完了
- @pasta_sakura_script Luaモジュール実装 (talk_to_script関数)
- TalkConfig追加でpasta.toml [talk]セクション対応
- Tokenizer実装: 8種類の文字種別分解 (sakura_script, period, comma, strong, leader等)
- WaitInserter実装: 文字種別ごとの適切なウェイト値挿入
- regex 1.x依存追加 (さくらスクリプトタグ検出)

Tests: 51テスト実装 (29単体 + 22統合)
- 全ウェイト種別の包括的検証テスト追加
- 個別句読点検証、連続句読点最大値選択テスト追加
- 全テストパス、リグレッション0件

Docs: README.md, LUA_API.md, TEST_COVERAGE.md, tech.md更新完了

Phase: implementation-complete
Spec: .kiro/specs/sakura-script-wait/

--- a/crates/pasta_lua/Cargo.toml
+++ b/crates/pasta_lua/Cargo.toml
@@ -20,6 +20,7 @@ serde.workspace = true
 serde_json.workspace = true
 glob.workspace = true
 flate2.workspace = true
+regex.workspace = true
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.61.2", features = ["Win32_Globalization"] }
