--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ insta = { version = "1.42", features = ["glob"] }
 lua-src = { version = ">= 550.0.0, < 560.0.0", features = ["ucid"] }
 mlua = { version = "0.11", features = ["lua55", "vendored", "serialize"] }
 mlua-stdlib = { version = "0.1", features = ["json", "regex", "yaml"] }
+regex = "1"
 toml = "0.9.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
