feat(lua): Luaモジュールパス解決機構のrequire()準拠化
- user_scriptsディレクトリをデフォルト検索パスに追加
- すべてのモジュール読み込みをrequire()ベースに統一
- main.lua → entry.lua → scene_dic.luaの初期化順序を実装
- デフォルトmain.luaの提供
- scene_dic.luaの生成場所をcache/pasta/に変更
- pasta_sample_ghostテンプレートの更新
- 統合テストの追加
- TEST_COVERAGE.mdの更新

--- a/crates/pasta_sample_ghost/templates/pasta.toml.template
+++ b/crates/pasta_sample_ghost/templates/pasta.toml.template
@@ -19,6 +19,7 @@ pasta_patterns = ["dic/*.pasta"]
 # Lua モジュール検索パス（優先順位順）
 lua_search_paths = [
     "profile/pasta/save/lua",   # ユーザー保存スクリプト
+    "user_scripts",              # ユーザー作成スクリプト（カスタマイズ用）
     "scripts",                   # pasta 標準ランタイム
     "profile/pasta/cache/lua",   # トランスパイル済みキャッシュ
     "scriptlibs",                # 追加ライブラリ
