feat(lua-logging): @pasta_log モジュール実装完了
全15要件（R1.1〜R5.3）実装、33テスト全合格、0リグレッション。

主要コンポーネント:
- ValueConverter: 文字列/数値/真偽値/Table→JSON変換（1000要素/10深度制限）
- CallerInfo: inspect_stack(level=1)でLua呼び出し元情報取得
- LogModule: trace/debug/info/warn/error 5関数、tracing統合
- Registration: mod.rs統合、@pasta_persistence直後に登録

成果物:
- NEW: crates/pasta_lua/src/runtime/log.rs (270行)
- NEW: crates/pasta_lua/tests/log_module_test.rs (24テスト)
- NEW: crates/pasta_lua/tests/log_integration_test.rs (7テスト)
- NEW: crates/pasta_lua/tests/log_stack_level_test.rs (2テスト)
- MODIFIED: crates/pasta_lua/src/runtime/mod.rs (登録統合)
- MODIFIED: crates/pasta_lua/README.md, TEST_COVERAGE.md (ドキュメント更新)

完了基準達成:
✅ Spec Gate: 全フェーズ承認済み
✅ Test Gate: 466テスト全合格
✅ Doc Gate: README.md/TEST_COVERAGE.md更新
✅ Steering Gate: structure.md/tech.md整合確認
✅ Soul Gate: UNICODE識別子/yield型設計原則準拠

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tracing = "0.1"
 # Development dependencies
 tempfile = "3"
 insta = { version = "1.46.3", features = ["glob"] }
+tracing-test = { version = "0.2", features = ["no-env-filter"] }
 
 # pasta_lua dependencies
 lua-src = { version = ">= 550.0.0, < 560.0.0", features = ["ucid"] }
