fix(core): SceneTable循環リセット機構実装 (ontalk-sample-ghost-bug)
SceneTableのシーン候補キャッシュに循環リセット機構を追加し、
OnTalkなど重複シーンの永久沈黙バグを修正。

変更内容:
- resolve_scene_id: Phase 3-5分割、全候補消費後に自動リセット
- resolve_scene_id_unified: 同様の循環リセット対応
- pasta.toml: talk_interval 180/300 → 30/60 (デモ用)
- 新規テスト4件: cycling, reshuffles, preserves_candidates, unified_cycling
- 既存テスト修正: unified_local_found (is_err → is_ok)
- TEST_COVERAGE.md: テストマッピング追加

全テスト通過: cargo test --workspace (0 failures)

--- a/crates/pasta_sample_ghost/ghosts/hello-pasta/ghost/master/pasta.toml
+++ b/crates/pasta_sample_ghost/ghosts/hello-pasta/ghost/master/pasta.toml
@@ -40,8 +40,8 @@ level = "debug"
 
 [ghost]
 # ランダムトーク発生間隔（秒）
-talk_interval_min = 180  # 最小トーク間隔（デフォルト: 180）
-talk_interval_max = 300  # 最大トーク間隔（デフォルト: 300）
+talk_interval_min = 30   # 最小トーク間隔（デモ用: 30秒）
+talk_interval_max = 60   # 最大トーク間隔（デモ用: 60秒）
 # hour_margin = 30       # OnHour 誤差許容秒数（デフォルト: 30）
 
 [talk]
