feat(persist-spot-position): スポット位置継続保持機能の実装\n\nSTORE.actor_spotsフィールド追加、sakura_builder.build()シグネチャ拡張、\nSHIORI_ACT.build()でのSTORE連携、サンプルゴースト設定追加。\n全テストパス（21 Luaテストスイート、0 failures）。

--- a/crates/pasta_sample_ghost/ghosts/hello-pasta/ghost/master/pasta.toml
+++ b/crates/pasta_sample_ghost/ghosts/hello-pasta/ghost/master/pasta.toml
@@ -52,6 +52,12 @@ script_wait_comma = 500     # 読点ウェイト（デフォルト: 500）
 script_wait_strong = 500    # 強調記号ウェイト（デフォルト: 500）
 script_wait_leader = 200    # リーダーウェイト（デフォルト: 200）
 
+[actor."女の子"]
+spot = 0
+
+[actor."男の子"]
+spot = 1
+
 [persistence]
 # 永続化データディレクトリ
 data_dir = "profile/pasta/save"
