refactor(sample-ghost): テキスト配布ファイルを dist-src/ + robocopy 方式に移行
- dist-src/ ディレクトリに8テキストファイル配置（設定4＋DSLスクリプト4）
- release.ps1 に robocopy Step 2 追加（9ステップ化）
- config_templates.rs を surfaces.txt 生成のみに縮小
- scripts.rs の pub 定数削除、テスト用ヘルパーのみ残存
- lib.rs generate_ghost() を画像+surfaces.txt のみに縮小
- integration_test.rs を dist-src 読み込みに移行
- dist_src_validation_test.rs 新規追加
- TEST_COVERAGE.md, README.md, structure.md ドキュメント更新
- 全27テスト合格（pasta_sample_ghost）、リグレッションなし

Closes xcopy-text-files

--- a/crates/pasta_sample_ghost/dist-src/ghost/master/pasta.toml
+++ b/crates/pasta_sample_ghost/dist-src/ghost/master/pasta.toml
@@ -9,8 +9,8 @@
 # 将来的な pasta_lua の汎用用途（ノベルゲーム、ツール等）では
 # このセクションが必須になる可能性があります。
 [package]
-name = "{{name}}"
-version = "{{version}}"
+name = "hello-pasta"
+version = "1.0.0"
 edition = "2024"
 
 [loader]
